gatekeeper/gatekeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: gatekeeper
  labels:
    gatekeeper: allow
    owner: gateowner
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        # image: nginxinc/nginx-unprivileged
        image: nginx
        ports:
        - containerPort: 80
        securityContext:
          allowPrivilegeEscalation: true
          # privileged: true
        #   capabilities:
        #     drop: ["ALL"]
        #   runAsNonRoot: true
        #   seccompProfile:
        #     type: RuntimeDefault
          # runAsUser: 0
