gatekeeper/constraint-required-label-v1.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabelsv1
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabelsv1
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabelsv1

        violation[{"msg": msg, "details": {"missing_labels": missing}}] {
          provided := {label | input.review.object.metadata.labels[label]}
          required := {label | label := input.parameters.labels[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("You must provide labels: %v", [missing])
        }
---
# Run apply command second time 
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabelsv1
metadata:
  name: k8s-required-label-constraint-v1
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    name: nginx-gk
    scope: Namespaced
    namespaces: ["dev-apps"]
  parameters:
    labels: ["gatekeeper"]
